--- a/minjs.css
+++ b/minjs.css
@@ -18,3 +18,21 @@ section {
 section#minform input {
   display: block;
   margin-top: 0.5em; }
+
+.page-header {
+  display: flex;
+  justify-content: space-between; }
+
+.downloads {
+  display: flex;
+  align-items: center; }
+  .downloads > * {
+    margin-left: 0.5em;
+    margin-right: 0.5em; }
+    .downloads > *:first-child {
+      margin-left: 0; }
+    .downloads > *:last-child {
+      margin-right: 0; }
+  .title {
+    font-size: 16px;
+    font-weight: bold; }
